# Tetra

./: Dockerfile  README.md  custom_dataset.json  dprint.json  product_reviews.csv  pyproject.toml  setup.py  test_input.json
examples/: README_custom_fine_tuning.md  README_fine_tuning.md  custom_dataset_fine_tuning.py  example.py  fine_tuning.py  image_gen.py
protos/: remote_execution.proto
src/: client.py  client_manager.py  example.py  remote_execution_pb2_grpc.py  server.py
tetra/: __init__.py  client.py  client_manager.py  remote_execution_pb2.py  remote_execution_pb2_grpc.py  resource_manager.py  runpod.py  runpod_handler.py  server.py
tetra/core/pool/: cluster_manager.py  dataclass.py  ex.py  job.py  worker.py
tetra/core/utils/: logger.py
